--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "4.0.0",
-    "gulp-bookmarklet": "1.0.0",
+    "gulp-bookmarklet": "github:desholmes/gulp-bookmarklet#feature/remove-gulp-util-dep",
     "gulp-rename": "2.0.0"
   }
 }
